tests/snapshots/r#mod__parser__ical_example_2.snap
---
source: tests/mod.rs
expression: cal
---
IcalCalendar {
    properties: [
        ContentLine {
            name: "PRODID",
            params: ContentLineParams(
                [],
            ),
            value: "-//Microsoft Corporation//Outlook 16.0 MIMEDIR//EN",
        },
        ContentLine {
            name: "VERSION",
            params: ContentLineParams(
                [],
            ),
            value: "2.0",
        },
        ContentLine {
            name: "METHOD",
            params: ContentLineParams(
                [],
            ),
            value: "PUBLISH",
        },
        ContentLine {
            name: "X-MS-OLK-FORCEINSPECTOROPEN",
            params: ContentLineParams(
                [],
            ),
            value: "TRUE",
        },
    ],
    events: [
        IcalEvent {
            uid: "040000008200E000*************00800000000*****************00000000000000010000000********************************",
            dtstamp: IcalDTSTAMPProperty(
                CalDateTime(
                    2021-05-11T06:38:45Olson(
                        UTC,
                    ),
                ),
                ContentLineParams(
                    [],
                ),
            ),
            dtstart: IcalDTSTARTProperty(
                DateTime(
                    CalDateTime(
                        2021-05-27T10:30:00Olson(
                            CEST,
                        ),
                    ),
                ),
                ContentLineParams(
                    [
                        (
                            "TZID",
                            [
                                "W. Europe Standard Time",
                            ],
                        ),
                    ],
                ),
            ),
            dtend: Some(
                IcalDTENDProperty(
                    DateTime(
                        CalDateTime(
                            2021-05-27T12:00:00Olson(
                                CEST,
                            ),
                        ),
                    ),
                    ContentLineParams(
                        [
                            (
                                "TZID",
                                [
                                    "W. Europe Standard Time",
                                ],
                            ),
                        ],
                    ),
                ),
            ),
            duration: None,
            rdates: [],
            rrules: [],
            exdates: [],
            exrules: [],
            recurid: None,
            summary: Some(
                IcalSUMMARYProperty(
                    "Software-QS-Cast Application Performance Monitoring",
                    ContentLineParams(
                        [
                            (
                                "LANGUAGE",
                                [
                                    "de",
                                ],
                            ),
                        ],
                    ),
                ),
            ),
            properties: [
                ContentLine {
                    name: "CLASS",
                    params: ContentLineParams(
                        [],
                    ),
                    value: "PUBLIC",
                },
                ContentLine {
                    name: "CREATED",
                    params: ContentLineParams(
                        [],
                    ),
                    value: "20210511T063845Z",
                },
                ContentLine {
                    name: "DESCRIPTION",
                    params: ContentLineParams(
                        [],
                    ),
                    value: "Einwahldaten folgen in der Veranstaltungswoche \\nSeminartitel: Software-QS-Cast - Application Performance Monitoring\\nDatum: 27.Mai 2021\\nUhrzeit: 10:30 - ca.12:00 Uhr  \\n \\n",
                },
                ContentLine {
                    name: "DTEND",
                    params: ContentLineParams(
                        [
                            (
                                "TZID",
                                [
                                    "W. Europe Standard Time",
                                ],
                            ),
                        ],
                    ),
                    value: "20210527T120000",
                },
                ContentLine {
                    name: "DTSTAMP",
                    params: ContentLineParams(
                        [],
                    ),
                    value: "20210511T063845Z",
                },
                ContentLine {
                    name: "DTSTART",
                    params: ContentLineParams(
                        [
                            (
                                "TZID",
                                [
                                    "W. Europe Standard Time",
                                ],
                            ),
                        ],
                    ),
                    value: "20210527T103000",
                },
                ContentLine {
                    name: "LAST-MODIFIED",
                    params: ContentLineParams(
                        [],
                    ),
                    value: "20210511T063845Z",
                },
                ContentLine {
                    name: "PRIORITY",
                    params: ContentLineParams(
                        [],
                    ),
                    value: "5",
                },
                ContentLine {
                    name: "SEQUENCE",
                    params: ContentLineParams(
                        [],
                    ),
                    value: "0",
                },
                ContentLine {
                    name: "SUMMARY",
                    params: ContentLineParams(
                        [
                            (
                                "LANGUAGE",
                                [
                                    "de",
                                ],
                            ),
                        ],
                    ),
                    value: "Software-QS-Cast Application Performance Monitoring",
                },
                ContentLine {
                    name: "TRANSP",
                    params: ContentLineParams(
                        [],
                    ),
                    value: "OPAQUE",
                },
                ContentLine {
                    name: "UID",
                    params: ContentLineParams(
                        [],
                    ),
                    value: "040000008200E000*************00800000000*****************00000000000000010000000********************************",
                },
                ContentLine {
                    name: "X-MICROSOFT-CDO-BUSYSTATUS",
                    params: ContentLineParams(
                        [],
                    ),
                    value: "BUSY",
                },
                ContentLine {
                    name: "X-MICROSOFT-CDO-IMPORTANCE",
                    params: ContentLineParams(
                        [],
                    ),
                    value: "1",
                },
                ContentLine {
                    name: "X-MICROSOFT-DISALLOW-COUNTER",
                    params: ContentLineParams(
                        [],
                    ),
                    value: "FALSE",
                },
                ContentLine {
                    name: "X-MS-OLK-CONFTYPE",
                    params: ContentLineParams(
                        [],
                    ),
                    value: "0",
                },
            ],
            alarms: [
                IcalAlarm {
                    properties: [
                        ContentLine {
                            name: "TRIGGER",
                            params: ContentLineParams(
                                [],
                            ),
                            value: "-PT15M",
                        },
                        ContentLine {
                            name: "ACTION",
                            params: ContentLineParams(
                                [],
                            ),
                            value: "DISPLAY",
                        },
                        ContentLine {
                            name: "DESCRIPTION",
                            params: ContentLineParams(
                                [],
                            ),
                            value: "Reminder",
                        },
                    ],
                },
            ],
        },
    ],
    alarms: [],
    todos: [],
    journals: [],
    free_busys: [],
    vtimezones: {
        "W. Europe Standard Time": IcalTimeZone {
            properties: [
                ContentLine {
                    name: "TZID",
                    params: ContentLineParams(
                        [],
                    ),
                    value: "W. Europe Standard Time",
                },
            ],
            transitions: [
                IcalTimeZoneTransition {
                    transition: STANDARD,
                    properties: [
                        ContentLine {
                            name: "DTSTART",
                            params: ContentLineParams(
                                [],
                            ),
                            value: "16011028T030000",
                        },
                        ContentLine {
                            name: "RRULE",
                            params: ContentLineParams(
                                [],
                            ),
                            value: "FREQ=YEARLY;BYDAY=-1SU;BYMONTH=10",
                        },
                        ContentLine {
                            name: "TZOFFSETFROM",
                            params: ContentLineParams(
                                [],
                            ),
                            value: "+0200",
                        },
                        ContentLine {
                            name: "TZOFFSETTO",
                            params: ContentLineParams(
                                [],
                            ),
                            value: "+0100",
                        },
                    ],
                    dtstart: IcalDTSTARTProperty(
                        DateTime(
                            CalDateTime(
                                1601-10-28T03:00:00Local,
                            ),
                        ),
                        ContentLineParams(
                            [],
                        ),
                    ),
                },
                IcalTimeZoneTransition {
                    transition: DAYLIGHT,
                    properties: [
                        ContentLine {
                            name: "DTSTART",
                            params: ContentLineParams(
                                [],
                            ),
                            value: "16010325T020000",
                        },
                        ContentLine {
                            name: "RRULE",
                            params: ContentLineParams(
                                [],
                            ),
                            value: "FREQ=YEARLY;BYDAY=-1SU;BYMONTH=3",
                        },
                        ContentLine {
                            name: "TZOFFSETFROM",
                            params: ContentLineParams(
                                [],
                            ),
                            value: "+0100",
                        },
                        ContentLine {
                            name: "TZOFFSETTO",
                            params: ContentLineParams(
                                [],
                            ),
                            value: "+0200",
                        },
                    ],
                    dtstart: IcalDTSTARTProperty(
                        DateTime(
                            CalDateTime(
                                1601-03-25T02:00:00Local,
                            ),
                        ),
                        ContentLineParams(
                            [],
                        ),
                    ),
                },
            ],
        },
    },
    timezones: {
        "W. Europe Standard Time": Some(
            Europe/Berlin,
        ),
    },
}
