tests/snapshots/r#mod__parser__ical_example_freebusy.snap
---
source: tests/mod.rs
expression: cal
---
IcalCalendar {
    properties: [
        ContentLine {
            name: "VERSION",
            params: ContentLineParams(
                [],
            ),
            value: "2.0",
        },
        ContentLine {
            name: "PRODID",
            params: ContentLineParams(
                [],
            ),
            value: "-//RDU Software//NONSGML HandCal//EN",
        },
    ],
    events: [],
    alarms: [],
    todos: [],
    journals: [],
    free_busys: [
        IcalFreeBusy {
            uid: "hello",
            dtstamp: IcalDTSTAMPProperty(
                CalDateTime(
                    2025-07-26T13:06:53Olson(
                        UTC,
                    ),
                ),
                ContentLineParams(
                    [],
                ),
            ),
            properties: [
                ContentLine {
                    name: "UID",
                    params: ContentLineParams(
                        [],
                    ),
                    value: "hello",
                },
                ContentLine {
                    name: "DTSTAMP",
                    params: ContentLineParams(
                        [],
                    ),
                    value: "20250726T130653Z",
                },
                ContentLine {
                    name: "ORGANIZER",
                    params: ContentLineParams(
                        [],
                    ),
                    value: "mailto:jsmith@example.com",
                },
                ContentLine {
                    name: "DTSTART",
                    params: ContentLineParams(
                        [],
                    ),
                    value: "19980313T141711Z",
                },
                ContentLine {
                    name: "DTEND",
                    params: ContentLineParams(
                        [],
                    ),
                    value: "19980410T141711Z",
                },
                ContentLine {
                    name: "FREEBUSY",
                    params: ContentLineParams(
                        [],
                    ),
                    value: "19980314T233000Z/19980315T003000Z",
                },
                ContentLine {
                    name: "FREEBUSY",
                    params: ContentLineParams(
                        [],
                    ),
                    value: "19980316T153000Z/19980316T163000Z",
                },
                ContentLine {
                    name: "FREEBUSY",
                    params: ContentLineParams(
                        [],
                    ),
                    value: "19980318T030000Z/19980318T040000Z",
                },
                ContentLine {
                    name: "URL",
                    params: ContentLineParams(
                        [],
                    ),
                    value: "http://www.example.com/calendar/busytime/jsmith.ifb",
                },
            ],
        },
    ],
    vtimezones: {},
    timezones: {},
}
